--- a/styles/main.css
+++ b/styles/main.css
@@ -59,13 +59,14 @@ section a:visited
     text-decoration: none;
 
     color: black;
-    border: 2px solid #4caf50;
+    border: 2px solid grey;
+    border-radius: 5px;
 }
 
 a:hover,
 a:active
 {
-    background-color: #4caf50;
+    background-color: grey;
 }
 
 img
@@ -82,7 +83,7 @@ figcaption
     padding-bottom: 15px;
     padding-left: 5px;
 
-    background-color: #04b486;
+    background-color: #04a178;
 }
 
 footer
