--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,58 +4,60 @@ $secondary-color1: #04b486;
 $secondary-color2: #04a178;
 $secondary-color3: #7870cc;
 
-h1 {
+h1
+{
     color: white;
 }
 
-body {
+body
+{
     background-color: $primary-color;
 }
 
-#header {
+#header
+{
     margin-bottom: 3.5%;
+
     background-color: $secondary-color1;
 }
 
-.btn-group {
-    margin-left: 30%;
-    float: right;
-}
 
-.btn-group button {
-    background-color: white;
+.btn-group button
+{
     color: black;
+    background-color: white;
 }
 
-#links {
-    clear:both;
-    float:right;
+#formesc
+{
+    width: 25%;
 }
 
-#barra {
-    margin-left: 35%;
-}
-
-#barra button {
+#formesc button
+{
     width: 100%;
 }
 
-section {
+section
+{
     width: 60%;
     margin: auto;
     margin-bottom: 65px;
 }
 
-section button {
+section button
+{
     float: right;
 }
 
-section a {
+section a
+{
     float: right;
 }
 
 section a:link,
-section a:visited {
+section a:visited
+{
     display: inline-block;
 
     padding: 8px 20px;
@@ -69,27 +71,56 @@ section a:visited {
 }
 
 a:hover,
-a:active {
+a:active
+{
     background-color: grey;
 }
 
-img {
+section img
+{
     width: 300px;
     padding-bottom: 5px;
 }
 
-figcaption {
+figcaption
+{
     width: 300px;
     padding-top: 15px;
     padding-right: 5px;
     padding-bottom: 15px;
     padding-left: 5px;
+
     background-color: $secondary-color2;
 }
 
-footer {
+footer
+{
     padding-top: 10px;
     padding-bottom: 10px;
+
     text-align: center;
+
     background-color: $secondary-color3;
+}
+
+#menu
+{
+    display: none;
+}
+
+#btnmenu
+{
+    float: right;
+
+    margin-top: 15px;
+}
+#formmenu,
+#formmenu .form-group
+{
+    width: 100%;
+}
+
+#collapseExample
+{
+    width: 100%;
 }
