arreglat certs errors

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -115,7 +115,8 @@ footer
     margin-top: 15px;
 }
 #formmenu,
-#formmenu .form-group
+#formmenu .form-group,
+#formmenu button
 {
     width: 100%;
 }
