--- a/styles/media.scss
+++ b/styles/media.scss
@@ -1,8 +1,6 @@
-@media (min-width: 0) and (max-width: 375px)
-{
+@media (min-width: 0px) and (max-width: 375px) {
     /* iPhone 6 375x667 */
-    section
-    {
+    section {
         width: 95%;
         margin: auto;
         margin-bottom: 65px;
@@ -20,7 +18,31 @@
         font-size: 15px;
     }
 
-    img, figcaption {
+    section img, figcaption {
         width: 325px;
     }
+}
+
+@media (min-width: 0px) and (max-width: 735px) {
+
+  #menu {
+    display: block;
+  }
+
+  #btnesc {
+    display: none;
+  }
+
+  #formesc {
+    display: none;
+  }
+
+}
+
+@media (min-width: 736px) {
+
+  #collapseExample {
+    display: none;
+  }
+
 }
