--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 h1 {
   color: white;
+  font-size: 50px;
 }
 
 body {
@@ -16,16 +17,30 @@ body {
   background-color: white;
 }
 
-#formesc {
-  width: 25%;
+#form {
+  width: 50%;
+  margin: 0 auto;
 }
 
-#formesc button {
+#form button {
   width: 100%;
 }
 
+.form-group {
+  margin-bottom: 5px !important;
+}
+
+#btns {
+  margin: 0 auto;
+  display: inline-flex;
+  font-size: 12px;
+}
+
+#btns > a {
+  margin-left: 2px;
+}
+
 section {
-  width: 60%;
   margin: auto;
   margin-bottom: 65px;
 }
@@ -54,13 +69,15 @@ a:active {
   background-color: grey;
 }
 
-section img {
+section img, figcaption {
   width: 300px;
+}
+
+section img {
   padding-bottom: 5px;
 }
 
 figcaption {
-  width: 300px;
   padding-top: 15px;
   padding-right: 5px;
   padding-bottom: 15px;
@@ -91,5 +108,13 @@ footer {
 }
 
 #collapseExample {
+  width: 100%;
+}
+
+.mr-auto {
+  width: 100%;
+}
+
+.nav-item {
   width: 100%;
 }
