--- a/styles/media.css
+++ b/styles/media.css
@@ -15,24 +15,13 @@
     font-size: 15px;
   }
   section img, figcaption {
-    width: 325px;
+    width: 330px;
   }
-}
-
-@media (min-width: 0px) and (max-width: 735px) {
-  #menu {
+  #btns {
+    font-size: 8px;
     display: block;
   }
-  #btnesc {
-    display: none;
-  }
-  #formesc {
-    display: none;
-  }
-}
-
-@media (min-width: 736px) {
-  #collapseExample {
-    display: none;
+  #btn-buscar {
+    background-color: green;
   }
 }
